--- a/index.html
+++ b/index.html
@@ -28,116 +28,122 @@
         <img class="background-img" src="images/back-container.png">
     </div>
 </header>
-<section class="content">
-    <div class="container">
-        <div class="content01">
-            <div class="row">
-                <div class="col-lg-6"></div>
-                <div class="col-lg-6">
-                    <div class="content01-info01">
-                        <div class="content-number01">01</div>
-                        <div class="content-title01 h2">О сайте</div>
-                        <div class="content-text01 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Velit gravida commodo odio sed. Nunc tincidunt suspendisse odio at id enim neque.
-                            Vitae eu leo nullam augue. Viverra sed est,
-                            malesuada condimentum egestas odio pretium.<br><br>Mi adipiscing rhoncus, id viverra in.
-                            Et tortor nec id nibh duis tristique scelerisque vitae purus.A eget et cursus elementum.
-                            Massa vivamus integer facilisis nunc felis turpis sit. Eu porttitor at nunc,
-                            integer turpis elit in ut non.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="content02">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="content02-info">
-                        <div>
-                            <div class="content-number02">02</div>
-                            <div class="content-title02 h2">Заголовок</div>
-                            <div class="content-text02 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Velit gravida commodo odio sed.
-                                Nunc tincidunt suspendisse odio at id enim neque.
+<section>
+    <div class="content">
+        <div class="container">
+            <div class="content01">
+                <div class="row">
+                    <div class="col-lg-6"></div>
+                    <div class="col-lg-6">
+                        <div class="content01-info01">
+                            <div class="content-number01">01</div>
+                            <div class="content-title01 h2"><b>О сайте</b></div>
+                            <div class="content-text01 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                Velit gravida commodo odio sed. Nunc tincidunt suspendisse odio at id enim neque.
                                 Vitae eu leo nullam augue. Viverra sed est,
-                                malesuada condimentum egestas odio pretium.<br><br>
-                                Mi adipiscing rhoncus, id viverra in.
-                                Et tortor nec id nibh duis tristique scelerisque vitae purus.
-                                A eget et cursus elementum.
-                                Massa vivamus integer facilisis nunc felis turpis sit.
-                                Eu porttitor at nunc,
-                                integer turpis elit in ut non.
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="content02-image">
-                        <img class="img-fluid" src="images/FlyFly.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="content03">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="content03-img">
-                        <img class="img-fluid"
-                             src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%201%20(1).png">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="content03-info">
-                        <div>
-                            <div class="content-number03">03</div>
-                            <div class="content-title03 h2">Заголовок</div>
-                            <div class="content-text03 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Velit gravida commodo odio sed.
-                                Nunc tincidunt suspendisse odio at id enim neque.
-                                Vitae eu leo nullam augue. Viverra sed est,
-                                malesuada condimentum egestas odio pretium.<br><br>
-                                Mi adipiscing rhoncus, id viverra in.
-                                Et tortor nec id nibh duis tristique scelerisque vitae purus.
-                                A eget et cursus elementum.
-                                Massa vivamus integer facilisis nunc felis turpis sit.
-                                Eu porttitor at nunc,
+                                malesuada condimentum egestas odio pretium.<br><br>Mi adipiscing rhoncus, id viverra in.
+                                Et tortor nec id nibh duis tristique scelerisque vitae purus.A eget et cursus elementum.
+                                Massa vivamus integer facilisis nunc felis turpis sit. Eu porttitor at nunc,
                                 integer turpis elit in ut non.
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="content04">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="content04-info">
-                        <div>
-                            <div class="content-number04">04</div>
-                            <div class="content-title04 h2">Заголовок</div>
-                            <div class="content-text04 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                                Velit gravida commodo odio sed.
-                                Nunc tincidunt suspendisse odio at id enim neque.
-                                Vitae eu leo nullam augue. Viverra sed est,
-                                malesuada condimentum egestas odio pretium.<br><br>
-                                Mi adipiscing rhoncus, id viverra in.
-                                Et tortor nec id nibh duis tristique scelerisque vitae purus.
-                                A eget et cursus elementum.
-                                Massa vivamus integer facilisis nunc felis turpis sit.
-                                Eu porttitor at nunc,
-                                integer turpis elit in ut non.
+            <div class="content02">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="content02-info">
+                            <div>
+                                <div class="content-number02">02</div>
+                                <div class="content-title02 h2"><b>Заголовок</b></div>
+                                <div class="content-text02 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Velit gravida commodo odio sed.
+                                    Nunc tincidunt suspendisse odio at id enim neque.
+                                    Vitae eu leo nullam augue. Viverra sed est,
+                                    malesuada condimentum egestas odio pretium.<br><br>
+                                    Mi adipiscing rhoncus, id viverra in.
+                                    Et tortor nec id nibh duis tristique scelerisque vitae purus.
+                                    A eget et cursus elementum.
+                                    Massa vivamus integer facilisis nunc felis turpis sit.
+                                    Eu porttitor at nunc,
+                                    integer turpis elit in ut non.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="content02-image">
+                            <img class="img-fluid" src="images/FlyFly.png">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content03">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="content03-img">
+                            <img class="img-fluid"
+                                 src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%201%20(1).png">
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="content03-info">
+                            <div>
+                                <div class="content-number03">03</div>
+                                <div class="content-title03 h2"><b>Заголовок</b></div>
+                                <div class="content-text03 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Velit gravida commodo odio sed.
+                                    Nunc tincidunt suspendisse odio at id enim neque.
+                                    Vitae eu leo nullam augue. Viverra sed est,
+                                    malesuada condimentum egestas odio pretium.<br><br>
+                                    Mi adipiscing rhoncus, id viverra in.
+                                    Et tortor nec id nibh duis tristique scelerisque vitae purus.
+                                    A eget et cursus elementum.
+                                    Massa vivamus integer facilisis nunc felis turpis sit.
+                                    Eu porttitor at nunc,
+                                    integer turpis elit in ut non.
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <div class="img-fluid content04-image">
-                        <img class="content04-image01"
-                             src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%201%20(2).png">
-                        <img class="content04-image02"
-                             src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%202.png">
-                        <img class="content04-image03"
-                             src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%203.png">
+            </div>
+        </div>
+    </div>
+    <div class="last-content">
+        <div class="container">
+            <div class="content04">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="content04-info">
+                            <div>
+                                <div class="content-number04">04</div>
+                                <div class="content-title04 h2"><b>Заголовок</b></div>
+                                <div class="content-text04 p">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                    Velit gravida commodo odio sed.
+                                    Nunc tincidunt suspendisse odio at id enim neque.
+                                    Vitae eu leo nullam augue. Viverra sed est,
+                                    malesuada condimentum egestas odio pretium.<br><br>
+                                    Mi adipiscing rhoncus, id viverra in.
+                                    Et tortor nec id nibh duis tristique scelerisque vitae purus.
+                                    A eget et cursus elementum.
+                                    Massa vivamus integer facilisis nunc felis turpis sit.
+                                    Eu porttitor at nunc,
+                                    integer turpis elit in ut non.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="img-fluid content04-image">
+                            <img class="content04-image01"
+                                 src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%201%20(2).png">
+                            <img class="content04-image02"
+                                 src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%202.png">
+                            <img class="content04-image03"
+                                 src="images/FireShot%20Capture%20058%20-%20Все%20новости%20-%20baiterek.gov%203.png">
+                        </div>
                     </div>
                 </div>
             </div>
